--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.8.1",
         "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/webpack-encore": "^1.0.0",
-        "core-js": "^3.0.0",
-        "regenerator-runtime": "^0.13.2",
-        "stimulus": "^2.0.0",
-        "webpack-notifier": "^1.6.0",
-        "@fortawesome/fontawesome-free": "^5.8.1",
         "bloodhound-js": "^1.2.3",
+        "bootstrap": "4.6.0",
         "bootstrap-sass": "^3.3.7",
         "bootstrap-tagsinput": "^0.7.1",
         "bootswatch": "^3.3.7",
+        "core-js": "^3.0.0",
         "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+        "file-loader": "6.0.0",
         "highlight.js": "^10.4.1",
         "imports-loader": "^0.8.0",
         "jquery": "^3.5.1",
         "lato-font": "^3.0.0",
         "node-sass": "^4.9.3",
+        "popper.js": "^1.16.1",
+        "regenerator-runtime": "^0.13.2",
         "sass-loader": "^9.0.1",
+        "stimulus": "^2.0.0",
         "typeahead.js": "^0.11.1",
-        "bootstrap": "4.6.0",
-        "popper.js": "^1.16.1"
+        "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
     "private": true,
